--- a/src/main/resources/com/cloudedquartz/functionaltext/home-view.fxml
+++ b/src/main/resources/com/cloudedquartz/functionaltext/home-view.fxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<SplitPane dividerPositions="0.5" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
+<SplitPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="720" prefWidth="1280" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
   <items>
       <MenuBar>
         <menus>
@@ -26,8 +27,11 @@
       <TabPane tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab text="Text">
+            <AnchorPane>
+              <fx:include source="text-view.fxml" AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10" />
+            </AnchorPane>
           </Tab>
-          <Tab text="Images">
+          <Tab text="Image">
           </Tab>
         </tabs>
       </TabPane>
