--- a/src/main/resources/com/cloudedquartz/functionaltext/text-view.fxml
+++ b/src/main/resources/com/cloudedquartz/functionaltext/text-view.fxml
@@ -10,7 +10,7 @@
 <?import java.lang.String?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cloudedquartz.functionaltext.TextViewController">
+<BorderPane prefHeight="400.0" fx:id="textViewArea" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cloudedquartz.functionaltext.TextViewController">
    <top>
       <HBox spacing="20" BorderPane.alignment="CENTER">
          <BorderPane.margin>
